--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Martha Potts</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Hello! I'm currently an employed LPN pursing Full Stack Web Development education through the OSU Coding Bootcamp.</p>
+      <h1>Where I'm from:</h1>
+      <p>Atiny little town called Tucson Ohio (pronounced TUKSUN) outside of Chillicothe, Ohio near Tar Hollow State Park</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy researching creation mythology analyzing the patterns within comparatively, seeking wisdom and practical guidance from the ancients. I also enjoy outdoor activities such as biking, mountaineering, climbing, hiking, kayaking, motorcycling. My ultimate hobby is satisfying my curiosity and learning by exploring whether it be new places and experiences or re-examining the everyday for new perspective and insight. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Being independently wealthy. Given that the probability of that being a reality is very small, I want a job that lets me contribute to makiing the world a better place whether it be in small personal interactions or on a grand scale.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Homebase is Southern Ohio, between Chillicothe, Jackson, and Waverly, Ohio. Otherwise I'm roaming camp-spot to camp-spot exploring as much as I possibly can.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I'm attracted to problem solving, creative expression, building practical things, and teamwork, as well as continually learning new things. The idea of building something useful with meaningful impact sounds like a worthwhile and satisfying career choice for me.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/MarthaPotts">Github</a></li>
         </ul>
     </footer>
 </body>
